packages/example/content/essentials-core/7.4.0/how-to-guide/01.teams.md
---
title: Teams
index: 1
---

# Teams

Boomerang Launchpad provides functionality for Team Owners and Team Members to view and manage their Teams on the Platform. Functionality includes:

- Services
- Team Members
- Team Requests
- Catalog Requests
- Settings

<!-- ![Teams Overview](./assets/img/teams/boomerangadmin_teamsdetails_table.png) -->

## Managing a team

Team Owners control who joins their team, and they also make requests for services to be added to their teams. The Team Owner role allows an elevated type of user to manage the members and services of their teams.

### Services

This functionality allows you to view and search all of the services added to a team. You can request to add new services to a team via Catalog. Services that have a pending **Join a Service** are also shown with information about the request.

> Only Team Owners can request to add a service to a team in Catalog.

![Team Services](./assets/img/teams/teamServices.png)

#### Add a service

Use **Catalog** to request to add additional services to a team. You can follow the **Check out Catalog** link or navigate to **Catalog** in the top navigation bar. See the [Catalog How-To](/essentials-core/how-to-guide/catalog/) for more information.

When you add a Catalog service to your team, a Create a Service request is created. When approved, a corresponding Join a Service request is created for the service for each user in the team. Users gain access to the service after their request has been approved. Users can see all pending service requests in the **Service Requests** tab.

> **Note**: If you change your mind or make a mistake, Team Owners can create a Removal request to remove a Catalog service from their team.

<!-- ![Remove Service](./assets/img/teams/boomerangadmin_teamsdetails_removeservice.png) -->

### View team members

All members of a team are searchable by name and email. Team Owners can manage members roles, update their permissions, and request to remove them from the team.

> **Note**: Teams must have at least one Team Owner. If there is currently only one owner, that owner cannot be a regular user. To change the Team Owner, you must make another team member a Team Owner first.

<!-- ![Members List](./assets/img/teams/boomerangadmin_teamsdetails_memberslist.png) -->

### Adding team members

Team Owners can add or invite new team members from the **Members** tab in the header. You can search all platform users in your team by name and email.

On the top right of the content area, you see **Share team link** and **Add Members** that allows you to add members to the team.

#### Add members

1. Using the search bar, query for users to add to your team. 
2. Click the desired member to add and click **Add to team**. You can add multiple users at once. You can also remove a selected user by clicking the red `x` next to their name.

![Add Users](./assets/img/teams/addMembers.png)

3. If a team member does not exist on the platform, you can invite them to the platform and team with an invite link with **Share team link** or **Email**.

> **Email** has to be enabled at the platform level to use the email method. The **Share team link** is always be available.

#### Share team link

Provides a unique link to be shared that allows the accepting user to join a team upon using the link.

Share links can be one-time use or multi-use. They are valid for 24 hours.

#### Manage roles

Click **Manage Roles** for a specific member in the members list to update a member's roles per service. Learn more about [Service roles](https://launch.boomerangplatform.net/docs/essentials-core/7.3.0/architecture/security-architecture#authorization).

<!-- ![Members List](./assets/img/teams/boomerangadmin_teamsdetails_manageroles.png) -->

![Team Members](./assets/img/teams/teamMembers.png)

#### Remove team member

You can request to remove a team member and all of the services from a team. When approved, the member loses all access to the team and its services.

> **Note**: If you change your mind or made a mistake, you can cancel the remove request by selecting **Cancel remove request** for the associated member in the members list.

<!-- ![Remove Members](./assets/img/teams/boomerangadmin_teamsdetails_removemember.png) -->

### Member requests

Click **Member Requests** in the header to view and process all of join requests for this team. Users can quickly approve or deny requests without need to navigate to the Requests feature.

<!-- ![Team Requests](./assets/img/teams/boomerangadmin_teamsdetails_teamrequests.png) -->

#### Approving join requests

1. At this point, the request needs to be approved. Under the **Settings** tab, there is a configuration where join team requests can be enabled to be auto-approved (we recommend disabling this feature in shared instances). If **Auto-approval new team members** is enabled, then those individuals will be added to your team. If it is not enabled, then we will have two join team requests in the **Team Requests** tab.

![Team Requests](./assets/img/teams/teamRequests.png)

2. Select **Approve** for each of the pending requests in order to add them to your team.

![Approve Team Requests](./assets/img/teams/approveTeamRequests.png)

3. Navigate to **Team Members** to view the new members of your team. As the Team Owner, you also have additional capabilities from this page. Team Owners can add other members as an owner. 

    Team Owners can also manage the roles that a member has for each of their team services. A team member can also remove a member of their team (although they cannot remove themselves).

### Service requests

Service requests allow you to view all outstanding Catalog requests for this team including **Create a Service**, **Join a Service**, **Remove a Service** and **Leave a Service**. View more about the different [Request types](https://wdc2.cloud.boomerangplatform.net/dev/docs/essentials-core/7.4.0/how-to-admin/requests).

<!-- ![Catalog Requests](./assets/img/teams/boomerangadmin_teamsdetails_catalogrequests.png) -->

### Settings

**Settings** like enabling auto-approve for **Join a Team** requests and making the team public or private are available at this page.

#### Private teams

Private teams aren't discoverable by non-team members. They don't appear in the search results for **Join a team**, and users who want to join need to be invited by a Team Owner or platform Administrator. A team can be made public or private by the Team Owner in team settings.

<!-- ![Settings](./assets/img/teams/boomerangadmin_teamsdetails_settings.png) -->
